# Kijin

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: .$Application.drawio.bkp  .gitignore  Application.drawio  README.md  Rendering.drawio
examples/: CMakeLists.txt  main_example.cpp  window_example.cpp
resources/shaders/: basic_shader.glsl
shaders/: basic_shader.glsl
src/: Test.h  base_application.cpp  base_application.h  base_window.cpp  base_window.h  camera.cpp  camera.h  gfx_core.h  index_buffer.cpp  index_buffer.h  kijin_export.h  log.cpp  log.h  mesh.cpp  mesh.h  renderable.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h  window.cpp  window.h
